--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "the game of simon",
   "main": "index.js",
   "scripts": {
-      "build": "webpack --mode development",
-      "start": "npm run build; webpack-dev-server --open --mode development",
-      "lint": "eslint src/*.js"
-    },
+    "build": "webpack --mode development",
+    "start": "webpack-dev-server --open --mode development",
+    "lint": "eslint src/*.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/austinsaccounts/simon-game.git"
@@ -27,7 +27,10 @@
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
